--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='mongodb+srv://mohammad:mohammad@airbnb.tgqrt37.mongodb.net/test'
+NEXTAUTH_SECRET='NEXTAUTH_SECRET'
