--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@
 
 DATABASE_URL='mongodb+srv://mohammad:mohammad@airbnb.tgqrt37.mongodb.net/test'
 NEXTAUTH_SECRET='NEXTAUTH_SECRET'
+GITHUB_ID=a5948e0f986a17448df4
+GITHUB_SECRET=bf2fd3f1debfe9c512211c2913901343cbdaf5cf
+GOOGLE_CLIENT_ID=209137975158-bsr61qur77050o59730m3th9772fhqgs.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
