rent modal country select, amenities and image uploade added

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ GITHUB_ID=a5948e0f986a17448df4
 GITHUB_SECRET=bf2fd3f1debfe9c512211c2913901343cbdaf5cf
 GOOGLE_CLIENT_ID=209137975158-bsr61qur77050o59730m3th9772fhqgs.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="djktpd2pl"
